# healthchecks-decorator

./: .cookiecutter.json  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  USAGE.rst  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  contributing.rst  index.rst  reference.rst  requirements.txt  usage.rst
src/healthchecks_decorator/: __init__.py  __main__.py  decorator.py
tests/: __init__.py  test_decorator.py  test_main.py
