[tool.poetry]
name = "healthchecks-decorator"
version = "0.4.1"
description = "Healthchecks Decorator"
authors = ["Daniel del Valle <delvalle.dani@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/danidelvalle/healthchecks-decorator"
repository = "https://github.com/danidelvalle/healthchecks-decorator"
documentation = "https://healthchecks-decorator.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/danidelvalle/healthchecks-decora|/releases"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^2.3.5"
mypy = "^1.2"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.10.0"
pre-commit-hooks = "^4.4.0"
sphinx-click = "^4.3.0"
Pygments = "^2.15.1"
pyupgrade = "^3.3.2"
furo = ">=2021.11.12"
black = "^22.12.0"

[tool.poetry.scripts]
healthchecks-decorator = "healthchecks_decorator.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["healthchecks_decorator", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["@t.overload"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
